Account segregation for object field analysis rollback and product adoption new features

--- a/force-app/main/default/classes/VDT_CustomMetadataService.cls
+++ b/force-app/main/default/classes/VDT_CustomMetadataService.cls
@@ -3,6 +3,7 @@ public inherited sharing class VDT_CustomMetadataService {
     public static final String VDT_GENERAL_SETTINGS = 'VDT_General_Setting__mdt';
     public static final String VDT_QUERIES = 'VDT_Query__mdt';
     public static final String VDT_TABS = 'VDT_Tab__mdt';
+    public static final String VDT_DATE_FIELD_MAPPING = 'VDT_Object_Date_Field_Mapping__mdt';
     public static final String VDT_COUNTRY_FIELD_MAPPING = 'VDT_Object_Country_Field_Mapping__mdt';
     public static final String VDT_PRODUCT_FIELD_MAPPING = 'VDT_Object_Product_Field_Mapping__mdt';
     public static final String VDT_CUSTOM_OBJECT_FIELD_MAPPING = 'VDT_Custom_Objects_Field_Mapping__mdt';
@@ -12,6 +13,41 @@ public inherited sharing class VDT_CustomMetadataService {
     public static final String VDT_BATCH_SIZE_MAPPING = 'VDT_Object_Batch_Size_Mapping__mdt';
     @TestVisible
     private static Map<String, List<SObject>> customMetadataWithRecords = new Map<String, List<SObject>>();
+
+    public static String getDateFieldForObject(String objectName) {
+        String dateField;
+        List<VDT_Object_Date_Field_Mapping__mdt> dateFieldMappings = [SELECT Date_API_Field__c
+                                                                         FROM VDT_Object_Date_Field_Mapping__mdt
+                                                                         WHERE MasterLabel = :objectName
+                                                                         WITH SECURITY_ENFORCED];
+        if (customMetadataWithRecords.containsKey(VDT_DATE_FIELD_MAPPING)) {        
+            dateFieldMappings = customMetadataWithRecords.get(VDT_DATE_FIELD_MAPPING);
+        }
+
+        if (dateFieldMappings.isEmpty()) {
+            dateField = getDefaultDateField();
+        } else {
+            dateField = dateFieldMappings[0].Date_API_Field__c;
+        }
+        return dateField;
+    }
+
+    public static String getDefaultDateField() {
+        String dateField;
+        List<VDT_General_Setting__mdt> defaultSettings = [SELECT Default_Date_Field__c
+                                                          FROM VDT_General_Setting__mdt
+                                                          WHERE DeveloperName = :DEFAULT_APP_SETTINGS
+                                                          WITH SECURITY_ENFORCED];
+        if (customMetadataWithRecords.containsKey(VDT_GENERAL_SETTINGS)) {
+            defaultSettings = customMetadataWithRecords.get(VDT_GENERAL_SETTINGS);
+        }
+
+        if (!defaultSettings.isEmpty()) {
+            dateField = defaultSettings[0].Default_Date_Field__c;
+        }
+
+        return dateField;
+    }
 
     public static String getActiveMenuOptions() {
         List<String> menuOptions = new List<String>();
