--- a/force-app/main/default/classes/VDT_EmailService.cls
+++ b/force-app/main/default/classes/VDT_EmailService.cls
@@ -8,19 +8,19 @@ public inherited sharing class VDT_EmailService {
 
     public static void sendFieldValuesOccurrencesFinishedEmailNotification(String objectName) {
         List<EmailTemplate> emailTemplates = new VDT_EmailTemplateSelector().getByName(TEMPLATE_FIELDS_OCCURRENCES_FINISHED);
-        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().getByObjectNameAndReocordType(objectName, VDT_DataCalculationSelector.FIELD_OCCURRENCE_RECORD_TYPE_DEV);
+        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().withAdditionalFields(new List<String>{'CreatedById'}).getByObjectNameAndReocordType(objectName, VDT_DataCalculationSelector.FIELD_OCCURRENCE_RECORD_TYPE_DEV);
         if (emailTemplates.isEmpty()) {
             throw new EmailServiceException('Email Template Not Found');
         }
         if (calculationObjects.isEmpty()) {
             throw new EmailServiceException('Calculation For Notification Not Found');
         }
-        VDT_EmailService.sendEmail(emailTemplates[0].Id, UserInfo.getUserId(), calculationObjects[0].Id);
+        VDT_EmailService.sendEmail(emailTemplates[0].Id, calculationObjects[0].CreatedById, calculationObjects[0].Id);
     }
 
     public static void sendMasterAnalysisCalculationFinishedEmailNotification(String countries) {
 
-        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().withLimit(1).getByCountries(countries);
+        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().withAdditionalFields(new List<String>{'CreatedById'}).withLimit(1).getByCountries(countries);
         List<EmailTemplate> emailTemplates = new VDT_EmailTemplateSelector().getByName(TEMPLATE_MASTER_ANALYSIS_FINISHED);
         if (emailTemplates.isEmpty()) {
             throw new EmailServiceException('Email Template Not Found');
@@ -28,20 +28,21 @@ public inherited sharing class VDT_EmailService {
         if (calculationObjects.isEmpty()) {
             throw new EmailServiceException('Calculation For Notification Not Found');
         }
-        VDT_EmailService.sendEmail(emailTemplates[0].Id, UserInfo.getUserId(), calculationObjects[0].Id);
+        VDT_EmailService.sendEmail(emailTemplates[0].Id, calculationObjects[0].CreatedById, calculationObjects[0].Id);
     }
 
     private static void sendEmail(String templateId, String userId, String sobjectId) {
         
+        List<User> users = [SELECT Id, Email FROM User WHERE Id = :userId];
         Messaging.SingleEmailMessage message = Messaging.renderStoredEmailTemplate(templateId, userId, sobjectId);
 
-        message.setTargetObjectId(UserInfo.getUserId()); 
+        message.setTargetObjectId(userId); 
         message.setSenderDisplayName(SENDER_DISPLAY_NAME); 
         message.setReplyTo(REPLY_TO);
         message.setUseSignature(false); 
         message.setBccSender(false); 
         message.setSaveAsActivity(false); 
-        message.toAddresses = new String[] { UserInfo.getUserEmail() };
+        message.toAddresses = new String[] { users.get(0).Email };
 
 
         Messaging.SingleEmailMessage[] messages = new List<Messaging.SingleEmailMessage> {message};
@@ -54,8 +55,8 @@ public inherited sharing class VDT_EmailService {
 
     public static void sendFieldCalculationFinishedEmailNotification(String objectName) {
         List<EmailTemplate> emailTemplates = new VDT_EmailTemplateSelector().getByName(TEMPLATE_CALCULATION_FINISHED);
-        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().getByObjectName(objectName);
-
+        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().withAdditionalFields(new List<String>{'CreatedById'}).getByObjectName(objectName);
+        String userId = calculationObjects[0].CreatedById;
         if (emailTemplates.isEmpty()) {
             throw new EmailServiceException('Email Template Not Found');
         }
@@ -64,15 +65,18 @@ public inherited sharing class VDT_EmailService {
         }
 
         Messaging.SingleEmailMessage message = 
-            Messaging.renderStoredEmailTemplate(emailTemplates[0].Id, UserInfo.getUserId(), calculationObjects[0].Id);
+            Messaging.renderStoredEmailTemplate(emailTemplates[0].Id, userId, calculationObjects[0].Id);
 
-        message.setTargetObjectId(UserInfo.getUserId()); 
+        
+        List<User> users = [SELECT Id, Email FROM User WHERE Id = :userId];
+
+        message.setTargetObjectId(userId); 
         message.setSenderDisplayName(SENDER_DISPLAY_NAME); 
         message.setReplyTo(REPLY_TO);
         message.setUseSignature(false); 
         message.setBccSender(false); 
         message.setSaveAsActivity(false); 
-        message.toAddresses = new String[] { UserInfo.getUserEmail() };
+        message.toAddresses = new String[] { users.get(0).Email };
 
 
         Messaging.SingleEmailMessage[] messages = new List<Messaging.SingleEmailMessage> {message};
