--- a/force-app/main/default/classes/VDT_FieldValuesOccurrencesBatch.cls
+++ b/force-app/main/default/classes/VDT_FieldValuesOccurrencesBatch.cls
@@ -9,27 +9,44 @@ public with sharing class VDT_FieldValuesOccurrencesBatch implements Database.Ba
 
     public Database.QueryLocator start(Database.BatchableContext bc) {
         try {
+            String sobjectName = this.dataCalculationRecord.VDT_Object_Name__c;
+            if (this.dataCalculationRecord.VDT_Object_Name__c == 'PersonAccount' || this.dataCalculationRecord.VDT_Object_Name__c == 'BusinessAccount') {
+                sobjectName = 'Account';
+            }
             List<String> fieldNames = new List<String>();
 
-            for (Schema.SObjectField field : VDT_ObjectService.getAllAccessibleFieldsForObjectAndTypes(this.dataCalculationRecord.VDT_Object_Name__c, new List<DisplayType>{DisplayType.Picklist})) {
+            for (Schema.SObjectField field : VDT_ObjectService.getAllAccessibleFieldsForObjectAndTypes(sobjectName, new List<DisplayType>{DisplayType.Picklist})) {
                 fieldNames.add(field.getDescribe().getName());
             }
     
-            this.builder = new VDT_FieldValuesOccurrencesBuilder(this.dataCalculationRecord.VDT_Object_Name__c, fieldNames);
+            this.builder = new VDT_FieldValuesOccurrencesBuilder(sobjectName, fieldNames);
             String query = 'SELECT ' + String.join(fieldNames, ',');
             
-            String countryField = VDT_CustomMetadataService.getCountryFieldForObject(this.dataCalculationRecord.VDT_Object_Name__c);
+            String countryField = VDT_CustomMetadataService.getCountryFieldForObject(sobjectName);
+            String dateField = VDT_CustomMetadataService.getDateFieldForObject(sobjectName);            
             if (query.indexOf(countryField) < 0) {
                 query += ',' + countryField;
             }
     
-            query += ' FROM ' + this.dataCalculationRecord.VDT_Object_Name__c + ' WHERE ' + countryField + ' != NULL';
-    
+            query += ' FROM ' + sobjectName + ' WHERE ' + countryField + ' != NULL';
+
+            if (this.dataCalculationRecord.VDT_Object_Name__c == 'PersonAccount') {
+                query += ' AND IsPersonAccount = TRUE';
+            }
+            if (this.dataCalculationRecord.VDT_Object_Name__c == 'BusinessAccount') {
+                query += ' AND IsPersonAccount = FALSE';
+            }
+            if (this.dataCalculationRecord.Start_Date__c != NULL && this.dataCalculationRecord.End_Date__c != NULL) {
+                query += ' AND {0} >= :startDate AND {0} <= :endDate';
+            }
+            String queryFormatted = String.format(query, new List<String>{
+                dateField
+            });
             this.dataCalculationRecord.VDT_Job_Start_Date__c = Datetime.now();
             this.dataCalculationRecord.Batches_Number__c = 0;
             update this.dataCalculationRecord;
 
-            return Database.getQueryLocator(query);            
+            return Database.getQueryLocator(queryFormatted);            
         } catch (Exception e) {
             VDT_Log.get().add(e.getMessage() + '\n' + e.getStackTraceString(), VDT_LogSeverity.ERROR);
             VDT_Log.get().publish();
